# FastSMC

./: .gitignore  .gitmodules  CMakeLists.txt  Data.cpp  Data.hpp  DecodingParams.cpp  DecodingParams.hpp  DecodingQuantities.hpp  FileUtils.cpp  HMM.cpp  LEGACY_README.md  Makefile  MemoryUtils.cpp  MemoryUtils.hpp  README.md  RELEASE_NOTES.md  StringUtils.cpp  Timer.hpp  Types.hpp  azure-pipelines.yml  build.sh  clean.sh  decode.sh  getBoost.sh  getCSFS.sh  get_csfs.py  main.cpp  merge.sh  prepare.sh  runExample.sh  setup.py  time_regression.py  vcpkg-configuration.json  vcpkg.json
.github/workflows/: decoding-quantities.yml  deploy-public.yml  macos-unit.yml  python-package.yml  test.yml  ubuntu-asan.yml  ubuntu-coverage.yml  ubuntu-no-sse.yml  ubuntu-python.yml  ubuntu-regression.yml  ubuntu-unit.yml
ASMC_SRC/: clean.sh
ASMC_SRC/BOOST/: README.txt
ASMC_SRC/SRC/: ASMC.cpp  ASMC.hpp  BinaryDataReader.hpp  Data.cpp  Data.hpp  DataFastSMC.cpp  DataFastSMC.hpp  DecodePairsReturnStruct.hpp  DecodingParams.cpp  DecodingParams.hpp  DecodingQuantities.cpp  DecodingQuantities.hpp  FastSMC.cpp  FastSMC.hpp  FileUtils.cpp  FileUtils.hpp  HMM.cpp  HMM.hpp  HMM_fast_original.cpp  HmmUtils.cpp  HmmUtils.hpp  Individual.cpp  Individual.hpp  Makefile  MemoryUtils.cpp  MemoryUtils.hpp  StringUtils.cpp  StringUtils.hpp  Timer.cpp  Timer.hpp  Types.hpp  __init__.py  main.cpp  main_convertBinary.cpp  main_fastsmc.cpp  pybind.cpp
ASMC_SRC/SRC/HASHING/: ExtendHash.hpp  Individuals.hpp  Match.hpp  SeedHash.hpp  Utils.cpp
ASMC_SRC/SRC/tests/: test_asmc.py
ASMC_SRC/TESTS/: Placeholder.cpp  cli_interface_test.py  conftest.py  regression_test.py  test_ASMC.cpp  test_HMM.cpp  test_asmc.py  test_binary_data_reader.cpp  test_decoding_params.cpp  test_fastsmc_regression.cpp  test_hashing.cpp  test_hmm_utils.cpp  test_regression.cpp  test_regression.py  test_unit_asmc.py  test_unit_decoding_params.py
ASMC_SRC/TESTS/data/: decoding_quantities_bad.txt  decoding_quantities_good.txt
FILES/: CEU.demo
FILES/DECODING_QUANTITIES/: 30-100-2000.csfs  30-100-2000.intervalsInfo
FILES/DISC/: 200.disc  210.disc  25.disc  30-100-2000.disc
FILES/EXAMPLE/: exampleFile.n100.samples
FILES/FASTSMC_EXAMPLE/: example.samples
SRC/: DecodingParams.cpp  DecodingQuantities.cpp  FileUtils.hpp  HMM.cpp  Individual.cpp  Individual.hpp  Makefile  StringUtils.hpp  Timer.cpp  main.cpp
TOOLS/MERGE_POSTERIORS/src/asmcmergeposteriorsums/: ASMCmergePosteriorSums.java  PosteriorMerger.java  Utils.java
TOOLS/PLOT_POSTERIORS/: plotPosteriorHeatMap.py
TOOLS/PREPARE_DECODING/: getCSFS.sh  get_csfs.py  requirements.txt
TOOLS/PREPARE_DECODING/src/ASMCprepareDecoding/: ASMCprepareDecoding.java  ArraySpectrum.java  CSFS.java  Data.java  DecodingQuantities.java  Transition.java  Utils.java
TOOLS/PREPARE_DECODING/test/: reference_output.csfs  reference_output.intervalsInfo  test_file_contents.py  test_prepare.sh
c++_example/: FastSMC_example.sh  FastSMC_example_multiple_jobs.sh
cmake/: SIMD.cmake  compiler_options.cmake
cpp_example/: FastSMC_example.sh  FastSMC_example_multiple_jobs.sh
notebooks/: asmc-api-test.ipynb  fastsmc-minimal.ipynb  fastsmc.ipynb
src/: asmc
